feat!: a value is written as a JDT tree, never as text
The grammar builds each value node by node (plugin/grammar/ValueWriter) and
answers a JavaValue: the Expression, the classes it names by simple name,
and a formatted source() for display only. It replaces ValueGrammar.Written.

Every sink copies the tree into its own file's tree instead of placing a
string with createStringPlaceholder: JavaParameterEdits (setValue, retype,
add, which now builds the FieldDeclaration and lays out only its lines),
JavaManagedEdits, CodeEditor.replaceWithValue, setTrailingArguments and the
new CodeEditor.insertStatement for recorded calls.

HostValueContext holds the value an editor set and its tree; editors and
Parameters cells read back Optional<JavaValue>, and composites compose
trees (ValueGrammar.compose, BotRecords.compose), keeping an unedited part
as its own expression. A @Managed constant reference is resolved through
the file's imports (SourceNames), and constants compare as trees.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QsrqZotufGWebWJFpmXrVF